--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@
 body {
   font-size: 16px;
   background: #d5e1ef;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
